--- a/TestWordMerge/TestWordMerge.csproj
+++ b/TestWordMerge/TestWordMerge.csproj
@@ -37,17 +37,26 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\AbstractCouple.cs" />
+    <Compile Include="Core\ICouple.cs" />
+    <Compile Include="Models\Couple.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WordMergerHandler.cs" />
+    <Compile Include="WordsDocumentMergerHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Insert.docx" />
+    <None Include="Main.docx" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml">
       <Version>3.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies">
+      <Version>9.0.2.59</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
