oh my god how much time i need for this..

--- a/TestWordMerge/TestWordMerge.csproj
+++ b/TestWordMerge/TestWordMerge.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Abstract\AbstractCouple_Operators.cs" />
     <Compile Include="Core\ICouple.cs" />
     <Compile Include="Extensions\CoupleExtension.cs" />
+    <Compile Include="Extensions\OrganizationServiceExtension.cs" />
     <Compile Include="Models\Couple.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
