--- a/TestWordMerge/TestWordMerge.csproj
+++ b/TestWordMerge/TestWordMerge.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Abstract\AbstractCouple.cs" />
     <Compile Include="Abstract\AbstractCouple_Operators.cs" />
+    <Compile Include="Abstract\BaseAbstractHandler.cs" />
     <Compile Include="Core\ICouple.cs" />
     <Compile Include="Extensions\CoupleExtension.cs" />
     <Compile Include="Extensions\OrganizationServiceExtension.cs" />
