--- a/UnitTestWordMerge/UnitTestWordMerge.csproj
+++ b/UnitTestWordMerge/UnitTestWordMerge.csproj
@@ -61,6 +61,11 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Insert.docx" />
+    <None Include="Resources\Main.docx" />
+  </ItemGroup>
+  <Import Project="..\WordMerger\WordMerger.projitems" Label="Shared" />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
