--- a/UnitTestWordMerge/UnitTestWordMerge.csproj
+++ b/UnitTestWordMerge/UnitTestWordMerge.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml">
+      <Version>3.3.0</Version>
+    </PackageReference>
     <PackageReference Include="FakeXrmEasy.v9">
       <Version>2.7.0</Version>
     </PackageReference>
